--- a/customer/style.css
+++ b/customer/style.css
@@ -3,6 +3,16 @@
     height: auto;
 }
 
+.container a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.container a.active {
+    background-color: #2196F3;
+    color: white;
+  }
+
 .header {
     width: 100%;
     height: 80px;
@@ -18,6 +28,7 @@
 }
 
 .header .logo img {
+    margin: 5px;
     height: 50%;
     border-radius: 50%;
 }
@@ -39,12 +50,18 @@
 }
 
 .header .icon img {
+    margin: 5px;
     height: 50%;
     border-radius: 50%;
 }
 
+.menu {
+    width: 100%;
+    height: 45px;
+    background-color: powderblue;
+}
+
 .left_sidebar {
-    background-color: peru;
     float: left;
     height: 100vh;
     width: 20%;
@@ -59,7 +76,6 @@
 }
 
 .right_sidebar {
-    background-color: red;
     float: left;
     height: 100vh;
     width: 20%;
