--- a/customer/style.css
+++ b/customer/style.css
@@ -3,22 +3,38 @@
     height: auto;
 }
 
-.container a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
 .container a.active {
     background-color: #2196F3;
     color: white;
-  }
+}
+
 
 .header {
     width: 100%;
     height: 80px;
-    background: pink;
+    background: #ff9999;
     display: flex;
     justify-content: space-between;
+}
+
+.header li {
+    display: inline-block;
+}
+
+input[type="text"] {
+    margin: 25px;
+    height: 25px;
+    width: 150px;
+    box-sizing: border-box;
+    border: 1px solid pink;
+    border-radius: 5px;
+    outline:none;
+    padding: 12px 14px;
+    transition:0.6s ease-in-out;
+}
+input[type="text"]:focus{
+    width:500px; 
+    background-color: #ffe5e5;
 }
 
 .header .logo {
@@ -59,7 +75,25 @@
     width: 100%;
     height: 45px;
     background-color: powderblue;
+    text-decoration: none;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-align: center;
+    text-decoration: none;
+}
+
+.menu li {
+    padding: 14px 16px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+}
+
 
 .left_sidebar {
     float: left;
@@ -67,12 +101,13 @@
     width: 20%;
 }
 .content {
-    background-color: plum;
+    background-color: #FFEFD5;
     float: left;
     width: 60%;
     height: 100vh;
     display: flex;
     flex-direction: row;
+    text-align: center;
 }
 
 .right_sidebar {
