--- a/admin/access/css/main.css
+++ b/admin/access/css/main.css
@@ -283,3 +283,32 @@
 .footer .author-1 {
     margin-right: 250px;
 }
+
+.form-add-new form {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    margin-left: 15px;
+}
+
+.form-add-new label {
+    margin-top: 15px;
+    margin-bottom: 15px ;
+}
+
+.form-add-new input {
+    width: 70%;
+    height: 25px;
+}
+
+.form-add-new button {
+    margin-top: 15px;
+    margin-bottom: 15px ;
+    width: 170px;
+    height: 30px;
+    border-radius: 5px;
+    margin-right: 0;
+    background-color: rgb(0, 255, 0);
+}
